--- a/PowerApp/Src/Registrar_Tarea.fx.yaml
+++ b/PowerApp/Src/Registrar_Tarea.fx.yaml
@@ -1,4 +1,4 @@
-"'Pruebas Marcos_1' As screen":
+Registrar_Tarea As screen:
     Fill: =Color.White
     LoadingSpinnerColor: =App.Theme.Colors.Primary
 
@@ -37,7 +37,7 @@
         HoverColor: =Color.White
         HoverFill: |-
             =ColorValue("#EE2C70")
-        OnSelect: =Navigate('Pruebas Marcos_1')
+        OnSelect: =Navigate(Registrar_Tarea)
         PressedBorderColor: =App.Theme.Colors.Darker40
         PressedColor: =Self.Color
         PressedFill: =App.Theme.Colors.Darker40
