--- a/PowerApp/Src/Screen3.fx.yaml
+++ b/PowerApp/Src/Screen3.fx.yaml
@@ -58,7 +58,7 @@
         HoverColor: =Color.White
         HoverFill: |-
             =ColorValue("#EE2C70")
-        OnSelect: =Navigate('Pruebas Marcos')
+        OnSelect: =Navigate(Registrar_Kr)
         PressedBorderColor: =App.Theme.Colors.Darker40
         PressedColor: =Self.Color
         PressedFill: =App.Theme.Colors.Darker40
@@ -1143,9 +1143,7 @@
         HoverColor: =Color.White
         HoverFill: |-
             =ColorValue("#EE2C70")
-        OnSelect: |-
-            =form_registrar_gestion.DisplayMode.View;
-            gallery_Tareas_Gestion.DisplayMode.View
+        OnSelect: =ViewForm(form_registrar_gestion);
         PressedBorderColor: =App.Theme.Colors.Darker40
         PressedColor: =Self.Color
         PressedFill: =App.Theme.Colors.Darker40
@@ -1177,11 +1175,7 @@
         HoverColor: =Color.White
         HoverFill: |-
             =ColorValue("#EE2C70")
-        OnSelect: |-
-            =form_registrar_gestion.DisplayMode.Edit;
-            gallery_Tareas_Gestion.DisplayMode.Edit;
-            
-            form_registrar_gestion.DisplayMode.Edit;
+        OnSelect: =EditForm(form_registrar_gestion);
         PressedBorderColor: =App.Theme.Colors.Darker40
         PressedColor: =Self.Color
         PressedFill: =App.Theme.Colors.Darker40
