--- a/PowerApp/Src/Screen3.fx.yaml
+++ b/PowerApp/Src/Screen3.fx.yaml
@@ -168,7 +168,7 @@
         DelayItemLoading: =true
         Fill: =RGBA(220, 220, 220, 1)
         Height: =600
-        Items: =T_OKR_APP_GCI_003
+        Items: =Search(T_OKR_APP_GCI_003, TextInputCanvas1.Value, nombreKR,descripcionKR)
         Layout: =Layout.Vertical
         LoadingSpinner: =LoadingSpinner.Data
         OnSelect: =
@@ -1225,4 +1225,12 @@
         X: =1209
         Y: =108
         ZIndex: =16
+
+    "TextInputCanvas1 As 'Entrada de texto'":
+        DisplayMode: =DisplayMode.Edit
+        Height: =30
+        Width: =275
+        X: =101
+        Y: =101
+        ZIndex: =17
 
