--- a/PowerApp/Src/Screen3_1.fx.yaml
+++ b/PowerApp/Src/Screen3_1.fx.yaml
@@ -2,6 +2,31 @@
     Fill: =Color.White
     LoadingSpinnerColor: =App.Theme.Colors.Primary
 
+    Image5_3 As image:
+        BorderColor: =App.Theme.Colors.Darker40
+        DisabledBorderColor: =RGBA(166, 166, 166, 1)
+        DisabledFill: =RGBA(244, 244, 244, 1)
+        Height: =768
+        Image: =Torito
+        ImagePosition: =ImagePosition.Fill
+        Width: =1366
+        ZIndex: =1
+
+    HtmlText2 As htmlViewer:
+        DisabledBorderColor: =RGBA(166, 166, 166, 1)
+        Font: =App.Theme.Font
+        Height: =668
+        HtmlText: |-
+            =$"<div style='background: rgba(255, 255, 255, 0.3); backdrop-filter: blur(10px); border-radius: 0px; width: {Self.Width}px; height: {Self.Height-1}px;'></div>"
+        PaddingBottom: =0
+        PaddingLeft: =0
+        PaddingRight: =0
+        PaddingTop: =0
+        Size: =13
+        Width: =1366
+        Y: =100
+        ZIndex: =2
+
     Rectangle1_6 As rectangle:
         BorderColor: =App.Theme.Colors.Darker40
         Fill: =RGBA(0, 153, 204, 1)
@@ -141,42 +166,271 @@
         Y: =30
         ZIndex: =8
 
-    Container1 As groupContainer.manualLayoutContainer:
-        DropShadow: =DropShadow.Light
-        Fill: =RGBA(214, 221, 224, 1)
-        RadiusBottomLeft: =4
-        RadiusBottomRight: =4
-        RadiusTopLeft: =4
-        RadiusTopRight: =4
-        X: =67
-        Y: =531
+    Gallery2 As gallery.galleryVertical:
+        BorderColor: =App.Theme.Colors.Darker40
+        DelayItemLoading: =true
+        Fill: =RGBA(255, 255, 255, 1)
+        Height: =576
+        Items: =T_OKR_APP_GCI_003
+        Layout: =Layout.Vertical
+        LoadingSpinner: =LoadingSpinner.Data
+        TemplateSize: =212
+        Width: =1270
+        X: =53
+        Y: =166
         ZIndex: =9
 
-    Group1 As group:
-        Height: =5
-        Width: =5
-        X: =40
-        Y: =40
-        ZIndex: =10
-
-        Image5_3 As image:
-            BorderColor: =App.Theme.Colors.Darker40
+        HtmlText1 As htmlViewer:
             DisabledBorderColor: =RGBA(166, 166, 166, 1)
-            DisabledFill: =RGBA(244, 244, 244, 1)
-            Height: =768
-            Image: =Torito
-            ImagePosition: =ImagePosition.Fill
-            Width: =1366
+            Font: =App.Theme.Font
+            Height: =212
+            HtmlText: |-
+                =$"<div style='border-radius: 5px;padding: 97px;margin: 0px;background-color: #f9f9f9;border-bottom: 5px solid rgba(238,40,122,0.9);'></div>"
+            OnSelect: =Select(Parent)
+            PaddingBottom: =1
+            PaddingLeft: =1
+            PaddingRight: =1
+            PaddingTop: =1
+            Size: =13
+            Width: =1252
             ZIndex: =1
 
-        Rectangle3_3 As rectangle:
-            AccessibleLabel: =
-            BorderColor: =App.Theme.Colors.Darker40
-            Fill: =RGBA(0,0,0,0.3)
-            Height: =668
-            HoverFill: =RGBA(0, 0, 0, 0.3)
-            PressedFill: =
-            Width: =1366
-            Y: =100
+        TextCanvas2 As Texto:
+            DisplayMode: =DisplayMode.Edit
+            Height: =39
+            Text: =ThisItem.objetivoKR
+            Width: =300
+            X: =10
+            Y: =159
             ZIndex: =2
+
+        TextCanvas2_1 As Texto:
+            DisplayMode: =DisplayMode.Edit
+            Height: =29
+            Text: =ThisItem.nombreKR
+            Width: =347
+            X: =10
+            Y: =30
+            ZIndex: =3
+
+        TextCanvas2_2 As Texto:
+            DisplayMode: =DisplayMode.Edit
+            Height: =42
+            Text: =ThisItem.descripcionKR
+            Width: =348
+            X: =10
+            Y: =85
+            ZIndex: =4
+
+        Gallery3 As gallery.galleryVertical:
+            BorderColor: =App.Theme.Colors.Darker40
+            DelayItemLoading: =true
+            Height: =161
+            Items: |
+                =Filter(T_TAREAS_APP_GCI_003, nombreKRAsociado.Id = ThisItem.ID)
+            Layout: =Layout.Vertical
+            LoadingSpinner: =LoadingSpinner.Data
+            TemplateSize: =18
+            Width: =572
+            X: =688
+            Y: =30
+            ZIndex: =5
+
+            TextCanvas3_1 As Texto:
+                DisplayMode: =DisplayMode.Edit
+                Height: =20
+                Text: =ThisItem.nombreTareas
+                Width: =460
+                X: =42
+                Y: =1
+                ZIndex: =2
+
+            CheckboxCanvas1 As Casilla:
+                DisplayMode: =DisplayMode.Edit
+                Height: =20
+                Label: =
+                OnCheck: =false
+                OnSelect: =Select(Parent)
+                OnUncheck: =false
+                Width: =44
+                X: =486
+                Y: =1
+                ZIndex: =3
+
+        TextCanvas4 As Texto:
+            DisplayMode: =DisplayMode.Edit
+            Font: =Font.Arial
+            FontColor: =RGBA(40, 134, 222, 1)
+            Height: =19
+            Text: ="Nombre del KR"
+            Weight: ='TextCanvas.Weight'.Semibold
+            Width: =222
+            X: =10
+            Y: =11
+            ZIndex: =6
+
+        TextCanvas4_1 As Texto:
+            DisplayMode: =DisplayMode.Edit
+            Font: =Font.Arial
+            FontColor: =RGBA(40, 134, 222, 1)
+            Height: =19
+            Text: ="Descripción"
+            Weight: ='TextCanvas.Weight'.Semibold
+            Width: =222
+            X: =10
+            Y: =66
+            ZIndex: =7
+
+        TextCanvas4_2 As Texto:
+            DisplayMode: =DisplayMode.Edit
+            Font: =Font.Arial
+            FontColor: =RGBA(40, 134, 222, 1)
+            Height: =19
+            Text: ="Objetivo"
+            Weight: ='TextCanvas.Weight'.Semibold
+            Width: =222
+            X: =10
+            Y: =140
+            ZIndex: =8
+
+        TextCanvas4_3 As Texto:
+            DisplayMode: =DisplayMode.Edit
+            Font: =Font.Arial
+            FontColor: =RGBA(40, 134, 222, 1)
+            Height: =19
+            Text: ="Aprobado por el lider"
+            Weight: ='TextCanvas.Weight'.Semibold
+            Width: =222
+            X: =393
+            Y: =11
+            ZIndex: =9
+
+        TextCanvas2_3 As Texto:
+            DisplayMode: =DisplayMode.Edit
+            Height: =29
+            Text: =ThisItem.aprobacion
+            Width: =245
+            X: =393
+            Y: =30
+            ZIndex: =10
+
+        TextCanvas4_4 As Texto:
+            DisplayMode: =DisplayMode.Edit
+            Font: =Font.Arial
+            FontColor: =RGBA(40, 134, 222, 1)
+            Height: =19
+            Text: ="Tareas"
+            Weight: ='TextCanvas.Weight'.Semibold
+            Width: =222
+            X: =733
+            Y: =11
+            ZIndex: =11
+
+        TextCanvas4_5 As Texto:
+            Align: ='TextCanvas.Align'.Center
+            DisplayMode: =DisplayMode.Edit
+            Font: =Font.Arial
+            FontColor: =RGBA(40, 134, 222, 1)
+            Height: =19
+            Text: ="Finalizado"
+            Weight: ='TextCanvas.Weight'.Semibold
+            Width: =74
+            X: =1167
+            Y: =11
+            ZIndex: =12
+
+        TextCanvas2_4 As Texto:
+            DisplayMode: =DisplayMode.Edit
+            Font: =Font.Arial
+            Height: =29
+            Text: =Lower(ThisItem.usuarioAprobador.Department)
+            Width: =329
+            X: =393
+            Y: =91
+            ZIndex: =13
+
+        TextCanvas4_6 As Texto:
+            DisplayMode: =DisplayMode.Edit
+            Font: =Font.Arial
+            FontColor: =RGBA(40, 134, 222, 1)
+            Height: =19
+            Text: ="Equipo"
+            Weight: ='TextCanvas.Weight'.Semibold
+            Width: =222
+            X: =393
+            Y: =66
+            ZIndex: =14
+
+        Gallery6 As gallery.galleryHorizontal:
+            BorderColor: =App.Theme.Colors.Darker40
+            DelayItemLoading: =true
+            Height: =31
+            Items: =ThisItem.usuarioAprobador
+            LoadingSpinner: =LoadingSpinner.Data
+            TemplatePadding: =0
+            TemplateSize: =30
+            Width: =50
+            X: =544
+            Y: =28
+            ZIndex: =15
+
+            Container2 As groupContainer.manualLayoutContainer:
+                BorderColor: =RGBA(52, 152, 47, 1)
+                Fill: =RGBA(62, 128, 149, 1)
+                Height: =Self.Width
+                RadiusBottomLeft: =30
+                RadiusBottomRight: =30
+                RadiusTopLeft: =30
+                RadiusTopRight: =30
+                Width: =30
+                ZIndex: =1
+
+                TextCanvas6 As Texto:
+                    Align: ='TextCanvas.Align'.Center
+                    DisplayMode: =DisplayMode.Edit
+                    Font: =Font.Arial
+                    FontColor: =RGBA(255, 255, 255, 1)
+                    Height: =30
+                    Size: =11
+                    Text: ="SN"
+                    Weight: ='TextCanvas.Weight'.Bold
+                    Width: =30
+                    Wrap: =true
+                    X: =0
+                    Y: =0
+                    ZIndex: =1
+
+            Image1 As image:
+                BorderColor: =App.Theme.Colors.Darker40
+                DisabledBorderColor: =RGBA(166, 166, 166, 1)
+                DisabledFill: =RGBA(244, 244, 244, 1)
+                Height: =Self.Width
+                Image: |-
+                    =If(
+                        UsuariosdeOffice365.UserPhotoMetadata(ThisItem.Email).HasPhoto,
+                        UsuariosdeOffice365.UserPhotoV2(ThisItem.Email)
+                    )
+                OnSelect: =Select(Parent)
+                RadiusBottomLeft: =30
+                RadiusBottomRight: =30
+                RadiusTopLeft: =30
+                RadiusTopRight: =30
+                Width: =30
+                ZIndex: =2
+
+    TextCanvas5 As Texto:
+        Align: ='TextCanvas.Align'.Center
+        DisplayMode: =DisplayMode.Edit
+        Fill: |
+            =RGBA(0, 153, 204, 1)
+        Font: =Font.Arial
+        FontColor: =RGBA(255, 255, 255, 1)
+        Height: =42
+        Size: =20
+        Text: ="Sección de filtros"
+        Weight: ='TextCanvas.Weight'.Semibold
+        Width: =1270
+        X: =53
+        Y: =111
+        ZIndex: =10
 
