--- a/PowerApp/Src/Screen3_1.fx.yaml
+++ b/PowerApp/Src/Screen3_1.fx.yaml
@@ -199,6 +199,7 @@
             DisplayMode: =DisplayMode.Edit
             Height: =39
             Text: =ThisItem.objetivoKR
+            VerticalAlign: ='TextCanvas.VerticalAlign'.Top
             Width: =300
             X: =10
             Y: =159
@@ -206,8 +207,9 @@
 
         TextCanvas2_1 As Texto:
             DisplayMode: =DisplayMode.Edit
-            Height: =29
+            Height: =24
             Text: =ThisItem.nombreKR
+            VerticalAlign: ='TextCanvas.VerticalAlign'.Top
             Width: =347
             X: =10
             Y: =30
@@ -215,11 +217,12 @@
 
         TextCanvas2_2 As Texto:
             DisplayMode: =DisplayMode.Edit
-            Height: =42
+            Height: =55
             Text: =ThisItem.descripcionKR
+            VerticalAlign: ='TextCanvas.VerticalAlign'.Top
             Width: =348
             X: =10
-            Y: =85
+            Y: =80
             ZIndex: =4
 
         Gallery3 As gallery.galleryVertical:
@@ -231,8 +234,8 @@
             Layout: =Layout.Vertical
             LoadingSpinner: =LoadingSpinner.Data
             TemplateSize: =18
-            Width: =572
-            X: =688
+            Width: =538
+            X: =722
             Y: =30
             ZIndex: =5
 
@@ -241,7 +244,7 @@
                 Height: =20
                 Text: =ThisItem.nombreTareas
                 Width: =460
-                X: =42
+                X: =7
                 Y: =1
                 ZIndex: =2
 
@@ -253,7 +256,7 @@
                 OnSelect: =Select(Parent)
                 OnUncheck: =false
                 Width: =44
-                X: =486
+                X: =461
                 Y: =1
                 ZIndex: =3
 
@@ -278,7 +281,7 @@
             Weight: ='TextCanvas.Weight'.Semibold
             Width: =222
             X: =10
-            Y: =66
+            Y: =61
             ZIndex: =7
 
         TextCanvas4_2 As Texto:
@@ -294,24 +297,25 @@
             ZIndex: =8
 
         TextCanvas4_3 As Texto:
+            Align: ='TextCanvas.Align'.End
             DisplayMode: =DisplayMode.Edit
             Font: =Font.Arial
             FontColor: =RGBA(40, 134, 222, 1)
             Height: =19
-            Text: ="Aprobado por el lider"
+            Text: ="KR Aprobado"
             Weight: ='TextCanvas.Weight'.Semibold
-            Width: =222
-            X: =393
+            Width: =110
+            X: =368
             Y: =11
             ZIndex: =9
 
         TextCanvas2_3 As Texto:
             DisplayMode: =DisplayMode.Edit
-            Height: =29
+            Height: =19
             Text: =ThisItem.aprobacion
-            Width: =245
-            X: =393
-            Y: =30
+            Width: =60
+            X: =489
+            Y: =11
             ZIndex: =10
 
         TextCanvas4_4 As Texto:
@@ -342,23 +346,24 @@
         TextCanvas2_4 As Texto:
             DisplayMode: =DisplayMode.Edit
             Font: =Font.Arial
-            Height: =29
+            Height: =22
             Text: =Lower(ThisItem.usuarioAprobador.Department)
-            Width: =329
-            X: =393
-            Y: =91
+            Width: =222
+            X: =489
+            Y: =33
             ZIndex: =13
 
         TextCanvas4_6 As Texto:
+            Align: ='TextCanvas.Align'.End
             DisplayMode: =DisplayMode.Edit
             Font: =Font.Arial
             FontColor: =RGBA(40, 134, 222, 1)
             Height: =19
             Text: ="Equipo"
             Weight: ='TextCanvas.Weight'.Semibold
-            Width: =222
-            X: =393
-            Y: =66
+            Width: =70
+            X: =408
+            Y: =35
             ZIndex: =14
 
         Gallery6 As gallery.galleryHorizontal:
@@ -370,8 +375,8 @@
             TemplatePadding: =0
             TemplateSize: =30
             Width: =50
-            X: =544
-            Y: =28
+            X: =489
+            Y: =55
             ZIndex: =15
 
             Container2 As groupContainer.manualLayoutContainer:
@@ -392,7 +397,7 @@
                     FontColor: =RGBA(255, 255, 255, 1)
                     Height: =30
                     Size: =11
-                    Text: ="SN"
+                    Text: =Left(ThisItem.DisplayName,1)
                     Weight: ='TextCanvas.Weight'.Bold
                     Width: =30
                     Wrap: =true
@@ -417,6 +422,133 @@
                 RadiusTopRight: =30
                 Width: =30
                 ZIndex: =2
+
+        TextCanvas2_5 As Texto:
+            DisplayMode: =DisplayMode.Edit
+            Font: =Font.Arial
+            Height: =20
+            Size: =13
+            Text: =ThisItem.usuarioAprobador.DisplayName
+            Width: =195
+            X: =524
+            Y: =59
+            ZIndex: =16
+
+        TextCanvas4_7 As Texto:
+            Align: ='TextCanvas.Align'.End
+            DisplayMode: =DisplayMode.Edit
+            Font: =Font.Arial
+            FontColor: =RGBA(40, 134, 222, 1)
+            Height: =19
+            Text: ="Lider"
+            Weight: ='TextCanvas.Weight'.Semibold
+            Width: =70
+            X: =408
+            Y: =59
+            ZIndex: =17
+
+        TextCanvas4_8 As Texto:
+            Align: ='TextCanvas.Align'.End
+            DisplayMode: =DisplayMode.Edit
+            Font: =Font.Arial
+            FontColor: =RGBA(40, 134, 222, 1)
+            Height: =19
+            Text: ="Estado"
+            Weight: ='TextCanvas.Weight'.Semibold
+            Width: =70
+            X: =408
+            Y: =87
+            ZIndex: =18
+
+        TextCanvas4_9 As Texto:
+            Align: ='TextCanvas.Align'.End
+            DisplayMode: =DisplayMode.Edit
+            Font: =Font.Arial
+            FontColor: =RGBA(40, 134, 222, 1)
+            Height: =19
+            Text: ="Realizado"
+            Weight: ='TextCanvas.Weight'.Semibold
+            Width: =70
+            X: =408
+            Y: =108
+            ZIndex: =19
+
+        TextCanvas4_10 As Texto:
+            Align: ='TextCanvas.Align'.End
+            DisplayMode: =DisplayMode.Edit
+            Font: =Font.Arial
+            FontColor: =RGBA(40, 134, 222, 1)
+            Height: =19
+            Text: ="Período"
+            Weight: ='TextCanvas.Weight'.Semibold
+            Width: =70
+            X: =408
+            Y: =133
+            ZIndex: =20
+
+        fecini As Texto:
+            DisplayMode: =DisplayMode.Edit
+            Font: =Font.Arial
+            Height: =19
+            Size: =12
+            Text: =Text(ThisItem.fechaProgramadainicio,"dd/mm/yyyy")
+            VerticalAlign: ='TextCanvas.VerticalAlign'.Bottom
+            Width: =70
+            X: =491
+            Y: =133
+            ZIndex: =21
+
+        fecfin As Texto:
+            DisplayMode: =DisplayMode.Edit
+            Font: =Font.Arial
+            Height: =19
+            Size: =12
+            Text: =Text(ThisItem.fechaProgramadaFin,"dd/mm/yyyy")
+            VerticalAlign: ='TextCanvas.VerticalAlign'.Bottom
+            Width: =70
+            X: =649
+            Y: =133
+            ZIndex: =22
+
+        "Progress1 As 'Barra de progreso'":
+            BasePaletteColor: =RGBA(249, 83, 109, 1)
+            DisplayMode: =DisplayMode.Edit
+            Height: =19
+            Indeterminate: |-
+                =If(
+                    Round(
+                        Min(
+                            (Today() - DateValue(fecini.Text)),
+                            (DateValue(fecfin.Text) - DateValue(fecini.Text))
+                        )/
+                        Max(
+                            (DateValue(fecfin.Text) - DateValue(fecini.Text))
+                            ,1
+                        )*100,
+                        2
+                    ) > 0,
+                    false,
+                    true
+                )
+            ProgressColor: ='Progress.ProgressColor'.Warning
+            Shape: ='Progress.Shape'.Rounded
+            Thickness: ='Progress.Thickness'.Large
+            Value: |-
+                =Round(
+                    Min(
+                        (Today() - DateValue(fecini.Text)),
+                        (DateValue(fecfin.Text) - DateValue(fecini.Text))
+                    )/
+                    Max(
+                        (DateValue(fecfin.Text) - DateValue(fecini.Text))
+                        ,1
+                    )*100,
+                    2
+                )
+            Width: =80
+            X: =561
+            Y: =133
+            ZIndex: =23
 
     TextCanvas5 As Texto:
         Align: ='TextCanvas.Align'.Center
